<resources>
    <string name="app_name">MasterEditVideo</string>
    <string name="common_duration_default">0:00:00.000</string>

    <string name="media_pick_image">Images</string>
    <string name="media_pick_video">Videos</string>

    <string name="common_empty_data">Empty List</string>

    <!-- Select music -->
    <string name="select_music_header">Select Music</string>
    <string name="select_music_fail_download">Can\'t download this Song. Please try again later.</string>
    <string name="select_music_btn_done">Done</string>
    <string name="select_music_btn_reset">Reset</string>


    <!-- Dialog Mix Sound  -->
    <string name="dialog_mix_sound_header">Audio Mixing</string>
    <string name="dialog_mix_sound_btn_confirm">Confirm</string>

    <!-- Export -->
    <string name="export_header">Export Video</string>
    <string name="export_resolution_hd">HD (1280x720)</string>
    <string name="export_resolution_full_hd">Full HD (1920x1080)</string>
    <string name="export_resolution_qhd">QHD (2560x1440)</string>
    <string name="export_btn_start">Export</string>
    <string name="export_progress">Exporting… %d%%</string>
    <string name="export_complete">Export complete!</string>
    <string name="export_error_no_media">Please add media before exporting</string>

    <!-- Common -->
    <string name="common_btn_ok">OK</string>
    <string name="common_btn_cancel">Cancel</string>
    <string name="common_loading">Loading…</string>

</resources>