<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.dongnh.mastereditvideo.utils.view.LinearLayoutDialog
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@drawable/common_bg_dialog"
        android:layout_width="wrap_content"
        android:weightSum="1"
        android:padding="@dimen/common_padding_8dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/view_header"
                android:textColor="@color/colorWhite"
                android:text="@string/dialog_mix_sound_header"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:id="@+id/linear_recycler"
                android:layout_marginTop="@dimen/common_margin_8dp"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/view_items"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="@dimen/common_margin_8dp"
                android:weightSum="2"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    app:backgroundTint="@null"
                    android:text="@string/common_btn_cancel"
                    android:textColor="@color/colorWhite"
                    android:background="@drawable/state_button_dialog"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/btn_confirm"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    app:backgroundTint="@null"
                    android:text="@string/dialog_mix_sound_btn_confirm"
                    android:textColor="@color/colorPrimary"
                    android:background="@drawable/state_button_dialog"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

    </com.dongnh.mastereditvideo.utils.view.LinearLayoutDialog>

</layout>
