<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@color/colorBgApp"
        android:clickable="true"
        android:focusable="true"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/header_view"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:weightSum="7"
            android:gravity="center"
            android:background="@drawable/bg_layout_shadow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/btn_back"
                android:layout_weight="1.5"
                android:layout_width="0dp"
                android:background="@android:color/transparent"
                android:layout_gravity="center"
                android:src="@drawable/ic_back"
                android:layout_height="@dimen/image_height_45dp"
                android:contentDescription="@string/app_name" />

            <TextView
                android:id="@+id/header_title"
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_gravity="center"
                android:gravity="center"
                android:singleLine="true"
                android:ellipsize="end"
                android:textSize="@dimen/common_size_text_20sp"
                android:textColor="@color/colorWhite"
                android:text="@string/select_music_header"
                tools:text="@string/select_music_header"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/btn_click_done"
                android:layout_width="0dp"
                android:layout_weight="1.5"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginEnd="@dimen/common_margin_8dp"
                android:layout_marginTop="@dimen/common_margin_4dp"
                android:layout_marginBottom="@dimen/common_margin_4dp"
                android:background="@drawable/state_button_done"
                android:textSize="@dimen/common_size_text_14sp"
                android:textColor="@color/colorWhite"
                tools:text="Done"
                android:text="@string/select_music_btn_done"
                android:layout_height="@dimen/image_height_45dp" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/view_list_music"
            android:layout_width="0dp"
            android:background="@drawable/bg_list_music"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header_view"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:listitem="@layout/item_music"
            android:layout_height="0dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>