<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@color/colorBgApp"
        android:clickable="true"
        android:focusable="true"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/header_view"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:weightSum="7"
            android:gravity="center|start"
            android:background="@drawable/bg_layout_shadow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/btn_back"
                android:layout_weight="1.5"
                android:layout_width="0dp"
                android:background="@android:color/transparent"
                android:layout_gravity="center|start"
                android:src="@drawable/ic_back"
                android:layout_height="@dimen/image_height_45dp"
                android:contentDescription="@string/app_name" />

            <TextView
                android:id="@+id/header_title"
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_gravity="center"
                android:gravity="center"
                android:singleLine="true"
                android:ellipsize="end"
                android:textSize="@dimen/common_size_text_20sp"
                android:textColor="@color/colorWhite"
                android:text="@string/media_pick_image"
                tools:text="@string/media_pick_image"
                android:layout_height="wrap_content" />

            <ImageButton
                android:id="@+id/btn_next"
                android:layout_weight="1.5"
                android:layout_width="0dp"
                android:background="@android:color/transparent"
                android:layout_gravity="center"
                android:visibility="gone"
                android:src="@drawable/ic_select"
                android:layout_height="@dimen/image_height_45dp"
                android:contentDescription="@string/app_name" />

        </LinearLayout>

        <GridView
            android:id="@+id/grid_View"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header_view"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="match_parent"
            android:gravity="center"
            android:visibility="visible"
            android:stretchMode="columnWidth"
            android:horizontalSpacing="1dp"
            android:numColumns="3"
            android:clickable="true"
            android:focusable="true"
            tools:listitem="@layout/item_media"
            android:padding="@dimen/common_padding_4dp"
            android:verticalSpacing="1dp"
            android:layout_height="0dp" />

        <TextView
            android:id="@+id/view_empty"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header_view"
            android:layout_marginTop="@dimen/common_margin_45dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/common_empty_data"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/common_size_text_16sp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>